# StreamAnalyzerFor5GSlicing

./: 6gxr.yml  README.md
6gxr-system-code/ue_controller/: Start_All_UEs.sh  Start_All_UEs_without_rate_limiter.sh  get_ue_info.sh  start_ue_with_imsi_and_slice.sh  stop_all_ues.sh  stop_ue.sh  switch_ue.sh
centralized_learning/: Dockerfile  Makefile  README.md  docker-compose.yaml  requirements.txt
centralized_learning/backend/: alembic.ini  pyproject.toml
centralized_learning/backend/alembic/versions/: 0866b9a9401b_checking_changes.py  29741b0a91f6_initial_migration.py
centralized_learning/backend/app/: main.py
centralized_learning/backend/app/db/: base.py
centralized_learning/backend/app/models/: metric.py
centralized_learning/src/: 6gxr_admission_controller.py  admission_controller_trainer.py  prototype1_data_from_postgress-1749474919331.csv  prototype1_data_from_postgress-1749478026650.csv  prototype1_data_from_postgress.csv  ue_admission_model.h5  ue_admission_scaler.pkl
distributed_agents/: README.md  imsi_pool.py  job_distribution.py  plot.py  run_variations.sh  sjf.py  test_upf250.py  test_upf500.py  train.py  utils.py
distributed_agents/backend_RL/: Dockerfile  docker-compose.yaml
distributed_agents/best_model/: best_model.pth
distributed_agents/csvs/: bandwidth_real_info_SJF.csv  bandwidth_real_info__0.1_0.3.csv  bandwidth_real_info__0.3_0.3.csv  dqn_episode_rewards.csv  loss_q_values_per_episode.csv  loss_q_values_per_episode_1000_0.3_0.3.csv  loss_q_values_per_episode_100_0.3_0.3.csv  loss_q_values_per_episode_100_0.3_0.5.csv  (+24 more)
(+30 files in other folders)
