[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"  # Or your desired Python version
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
sqlalchemy = "2.0.37"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
